manifests/demoapp/frontend/dameon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: frontend-ds-v1sz
  labels:
    app: frontend-ds-v1
  annotations:
    nethopper.io/tag-core: 'true'
spec:
  selector:
    matchLabels:
      app: frontend-ds-v1
  template:
    metadata:
      labels:
        app: frontend-ds-v1
    spec:
      tolerations:
      # this toleration is to have the daemonset runnable on master nodes
      # remove it if your masters can't run pods
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: frontend-ds-v1
        image: cmunford73/frontend:latest
        ports:
          - containerPort: 8080
            name: web
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 30
