manifests/demoapp/frontend/standalone-daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: backend-ds-v1
  labels:
    app: backend-ds-v1
  annotations:
    nethopper.io/tag-edge: 'true'
spec:
  selector:
    matchLabels:
      app: backend-ds-v1
  template:
    metadata:
      labels:
        app: backend-ds-v1
    spec:
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: backend-ds-v1
        image: cmunford73/backend:latest
        ports:
          - containerPort: 8080
            name: web
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
      terminationGracePeriodSeconds: 30
