manifests/demoapp/frontend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-v1
  name: frontend
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31000
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend-v1
  sessionAffinity: None
  type: NodePort
